# tdms-hvds-json-header-writer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI_rust.yml
schema/: output.schema.json
src/: main.rs  output.rs  tdms_datatype.rs  tdms_lead_in.rs  tdms_metadata.rs  tdms_object.rs  tdms_parse_error.rs  tdms_segment.rs  util.rs
