[package]
name = "adas-hvds"
version = "1.0.0"
authors = ["Tian Yu <tian.yu@ni.com>"]
edition = "2018"

[[bin]]
name = "adas_hvds_to_json"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.32"
byteorder = "1.3.4"
chrono = "0.4.15"
clap = "2.33.3"
log = "0.4.11"
log4rs = "0.13.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
thiserror = "1.0.20"